src/tests/errors/staticanalysis/naming/general1_fail.cmp
program general1_fail
begin
  proc main()
  begin
    proc Tmp() : string
    begin
        return "Top of the world, ma!"
    end;

    var Tmp : int /* Error: already a symbol named Tmp in the current scope. */
    in
    printstr( Tmp() )
   end
end
